package com.whitstan.jwtlogin.constants

object TestTags {
    const val BUTTON_LOGIN = "loginButton"
    const val INPUT_USERNAME = "inputUsername"
    const val INPUT_PASSWORD = "inputPassword"
    const val LOADER = "loader"
}